add socail media acccounts partial view, add tittle on hover of product names, categories names, sales name Imported from Changeset 2397

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -39,7 +39,7 @@
 
 
 <div id='main-menu' class='main-menu headerMenu'>
-    <nav class='navigation'>
+    <nav class='navigation custom-max-width m-auto'>
         <span class='hamburger-menu'>
             Deparments
             <span class='burger-1'></span>
