--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -33,7 +33,7 @@
                                     </div>
                                     <div class="caption">
                                         <h4>
-                                            <a data-toggle="tooltip" title="@Model.productMasterList[i].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i].ProductId })">
+                                            <a title="@Model.productMasterList[i].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i].ProductId })">
                                                 @Model.productMasterList[i].Name
 
                                             </a>
@@ -82,7 +82,7 @@
                                         <!-- Smartshop Images End -->
                                     </div>
                                     <div class="caption">
-                                        <h4><a data-toggle="tooltip" title="@Model.productMasterList[i + 1].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"> @Model.productMasterList[i + 1].Name</a></h4>
+                                        <h4><a title="@Model.productMasterList[i + 1].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"> @Model.productMasterList[i + 1].Name</a></h4>
                                         <p class="price">
                                             @Model.CurrencySign @Model.productMasterList[i + 1].SellPrice
                                         </p>
@@ -127,7 +127,7 @@
                                         <!-- Smartshop Images End -->
                                     </div>
                                     <div class="caption">
-                                        <h4><a data-toggle="tooltip" title="@Model.productMasterList[i + 2].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })">@Model.productMasterList[i + 2].Name</a></h4>
+                                        <h4><a title="@Model.productMasterList[i + 2].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })">@Model.productMasterList[i + 2].Name</a></h4>
                                         <p class="price">
                                             @Model.CurrencySign@Model.productMasterList[i + 2].SellPrice
                                         </p>
