--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -23,10 +23,9 @@
                         <div class="header-icon floatright">
                             <a href="https://www.facebook.com/GaneData"><i class="fa fa-facebook"></i></a>
                             <a href="https://twitter.com/GaneData"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/ganedatapakistan/?igshid=syqrtgm544q6"><i class="fa fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/company/gane-data-scan"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.youtube.com/channel/UC1RWy0Y362z1-Px3KhRev4A"><i class="fa fa-youtube"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
                         </div>
                     </div>
                 </div>
