--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
@@ -26,11 +26,7 @@
                             <a href="/Shop"><img src="/Areas/Shop/Content/app/img/logo.png" class="img-responsive" alt=""></a>
                             <h5 id="follow-us" class="text-capitalize">Follow Us</h5>
                             <ul class="list-unstyled list-inline social">
-                                <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li class="rss"><a href="#"><i class="fa fa-rss"></i></a></li>
-                                <li class="pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                <li class="vimeo"><a href="#"><i class="fa fa-vimeo"></i></a></li>
+                                @Html.Action("_SocialMediaAccountsPartial", "Default")
                             </ul>
                         </div>
                     </div>
