add privacy policy link in sign up page (create.cshtml) Imported from Changeset 2398

--- a/WarehouseEcommerce/Areas/Shop/Views/User/Create.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/User/Create.cshtml
@@ -137,7 +137,7 @@
                                 <div data-v-5f85c551="" class="privacy-policy">
                                     <div class="checkbox-div-signup">
                                         <input type="checkbox" class="rectangle ">
-                                        <p  class="">I agree to <a>terms & conditions,</a> and <a>privacy policy.</a></p>
+                                        <p  class="">I agree to <a href="/privacy-policy">terms & conditions,</a> and <a href="/privacy-policy">privacy policy.</a></p>
                                     </div>
                                 </div>
                                 <div class="button-submit">
