--- a/WMS/Views/TenantDataImport/Index.cshtml
+++ b/WMS/Views/TenantDataImport/Index.cshtml
@@ -61,21 +61,24 @@
             <div class='panel-supplier-uploads'>
                 <h3>Supplier Imports</h3>
                 <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB</span>
-                <span class="clearfix">The file should have the columns in the order of ACCOUNT CODE<i style="color:red">*</i>, ACCOUNT NAME <i style="color:red">*</i>, ACCOUNT TYPE<i style="color:red">*</i> ( Add value for Customer=1, Supplier=2, EndUser=3 For ALL=0 ), </span>
-                <span class="clearfix">INVOICE EMAIL, INVOICE EMAIL NAME, PURCHASE EMAIL, PURCHASE EMAIL NAME, PHONE, FAX NUMBER,</span>
-                <span class="clearfix">BILLING ADDRESS 1<i style="color:red">*</i>, BILLING ADDRESS 2, BILLING ADDRESS 3, BILLING ADDRESS 4, BILLING POSTCODE, SHIPPING ADDRESS 1, SHIPPING ADDRESS 2, SHIPPING ADDRESS 3, SHIPPING ADDRESS 4, SHIPPING POSTCODE</span>
-                <span class="clearfix marketcheck" style="display:none">MARKET NAME <i style="color:red">*</i> VISIT FREQUENCY (Add value for Daily=1, Weekly=2, Fortnightly=3, Monthly=4,ThreeWeekly=5 )</span>
-                <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
+                <p>
+                    The file should have the columns in the order of ACCOUNT CODE<i style="color:red">*</i>, ACCOUNT NAME <i style="color:red">*</i>, ACCOUNT TYPE<i style="color:red">*</i> ( Add value for Customer=1, Supplier=2, EndUser=3 For ALL=0 ),
+                    INVOICE EMAIL, INVOICE EMAIL NAME, PURCHASE EMAIL, PURCHASE EMAIL NAME, PHONE, FAX NUMBER,
+                    BILLING ADDRESS 1<i style="color:red">*</i>, BILLING ADDRESS 2, BILLING ADDRESS 3, BILLING ADDRESS 4, BILLING POSTCODE, SHIPPING ADDRESS 1, SHIPPING ADDRESS 2, SHIPPING ADDRESS 3, SHIPPING ADDRESS 4, SHIPPING POSTCODE
+                </p>
+                <span class="clearfix marketcheck" style="display:none">
+                    MARKET NAME <i style="color:red">*</i> VISIT FREQUENCY (Add value for Daily=1, Weekly=2, Fortnightly=3, Monthly=4,ThreeWeekly=5 )
+                    <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
 
-                @if (ViewBag.IsVanSalesEnabled)
-                {
-                    <div class="col-md-6">
-                        @Html.Label("Contains Market Info?", htmlAttributes: new { @class = "col-md-4 pull-left" })
-                        <div class="col-md-8 pull-left">
-                            @Html.CheckBox("withMarketInfo", htmlAttributes: new { @class = "form-control", @Id = "withMarketInfo" })
+                    @if (ViewBag.IsVanSalesEnabled)
+                    {
+                        <div class="col-md-6">
+                            @Html.Label("Contains Market Info?", htmlAttributes: new { @class = "col-md-4 pull-left" })
+                            <div class="col-md-8 pull-left">
+                                @Html.CheckBox("withMarketInfo", htmlAttributes: new { @class = "form-control", @Id = "withMarketInfo" })
+                            </div>
                         </div>
-                    </div>
-                }
+                    }
             </div>
         </div>
 
@@ -85,10 +88,11 @@
                 <h3>Product Imports by Department</h3>
                 <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. The filename should be in the name of the department</span>
                 <span class="clearfix">For example, all products belonging to specific product department, should be in a csv file named <b>Products.csv</b></span>
-                <span class="clearfix", style="text-align:justify">
+                <span class="clearfix" , style="text-align:justify">
                     This should have the columns in the order of Product Code<i style="color:red">*</i>,Manufacturer Code, Description<i style="color:red">*</i>, Description 2,
-                    Inventory (values should be like 3.0), Base Unit of Measure (values should be like 4.0), 
-                    Buy Price (values should be like 5.0), Sell Price, Preferred Vendor No
+                    Inventory (values should be like 3.0), Base Unit of Measure (values should be like 4.0),
+                    Buy Price (values should be like 5.0), Sell Price, Preferred Vendor No, Barcode, Outer Barcode, Serialised
+
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
             </div>
