--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -30,36 +30,36 @@
                         <li><a href="/shop">Home</a></li>
                         @if (!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName))
                         {
-                            if (Url.Action() != Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName }))
-                            {
-                                <li><a href="@Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
-                            }
-                            else
+                            if (Url.Action() == Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName }))
                             {
                                 <li>@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</li>
                             }
-                        }
-
-                        @if (Url.Action() != Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName }))
-                        {
-                            if (!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup))
+                            else
                             {
-                                if (Url.Action() != Url.Action("ProductDetails", "Products", new { productId = @item.ProductId }))
+                                if (!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup))
                                 {
-                                    <li>@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</li>
+                                    if (Url.Action() == Url.Action("ProductCategories", "Products", new { productGroup = @item.ProductGroup.ProductGroup }))
+                                    {
+                                        <li><a href="@Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
+                                        <li>@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</li>
+                                    }
+                                    else
+                                    {
+                                        if (Url.Action() == Url.Action("ProductDetails", "Products", new { productId = @item.ProductId }))
+                                        {
+                                            if (!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName))
+                                            {
+                                                <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <li><a href="@Url.Action("ProductCategories", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
+                                            <li><a href="@Url.Action("ProductCategories", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
+                                            <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
+                                        }
+                                    }
                                 }
-                                else
-                                {
-                                    <li><a href="@Url.Action("ProductCategories", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
-                                }
-                            }
-                        }
-
-                        @if (Url.Action() != Url.Action("ProductDetails", "Products", new { productId = @item.ProductId }))
-                        {
-                            if (!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName))
-                            {
-                                <li><a href="@Url.Action("ProductDetails", "Products", new { productId = @item.ProductId })">@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</a></li>
                             }
                         }
 
@@ -189,16 +189,16 @@
 <script>
     function GetSortedList(e) {
         var sortvalue = parseInt(e.currentTarget.value);
-      
-    var groupId = $("#ProductGroups").val();
-    if (groupId === "" || groupId === undefined || groupId === null) { groupId = $("#ProductGroupsId").val(); }
-    var pagenumber = $("#pagenumber").val();
-    var departmentId = $("#departmentId").val();
-    var currentFilter = $("#currentFiltervalue").val();
-    var searchstring = $("#searchString").val();
-    var pageSize = $("#input-limit :selected").val();
-    var valuesparam = $("#valuesParameter").val();
-    window.location.href = basePath + "/shop/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&values=" + valuesparam;
+
+        var groupId = $("#ProductGroups").val();
+        if (groupId === "" || groupId === undefined || groupId === null) { groupId = $("#ProductGroupsId").val(); }
+        var pagenumber = $("#pagenumber").val();
+        var departmentId = $("#departmentId").val();
+        var currentFilter = $("#currentFiltervalue").val();
+        var searchstring = $("#searchString").val();
+        var pageSize = $("#input-limit :selected").val();
+        var valuesparam = $("#valuesParameter").val();
+        window.location.href = basePath + "/shop/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&values=" + valuesparam;
     }
 
     function PageSizeChanges(e) {
@@ -210,7 +210,7 @@
         var departmentId = $("#departmentId").val();
         var currentFilter = $("#currentFiltervalue").val();
         var searchstring = $("#searchString").val();
-var valuesparam = $("#valuesParameter").val();
+        var valuesparam = $("#valuesParameter").val();
         window.location.href = basePath + "/shop/Products/ProductCategories?productGroup=" + groupId + "&sortOrder=" + sortvalue + "&currentFilter=" + currentFilter + "&searchString=" + searchstring + "&page=" + pagenumber + "&pagesize=" + pageSize + "&department=" + departmentId + "&values=" + valuesparam;
     }
 
